Bug 288615 - calligrawords newpage break before table of contents
Summary: calligrawords newpage break before table of contents
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 00:02 UTC by Bernd Buschinski
Modified: 2011-12-10 01:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
test document (9.40 KB, application/vnd.oasis.opendocument.text)
2011-12-10 00:02 UTC, Bernd Buschinski
Details
top libreoffice, bottom calligrawords (18.69 KB, image/png)
2011-12-10 00:03 UTC, Bernd Buschinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Buschinski 2011-12-10 00:02:39 UTC
Created attachment 66572 [details]
test document

Version:           2.4-snapshots (using KDE 4.7.3) 
OS:                Linux

calligrawords newpage break before table of contents. The table of contents shopuld be on Page 2, not 1. So the number of pages should be 3, not 2.

Reproducible: Always

Steps to Reproduce:
load test document

Actual Results:  
see "some text" and the "table of contents" is on page 1

Expected Results:  
"table of contents" should be on page 2

kde-4.7.4
calligra-2.3.84
Comment 1 Bernd Buschinski 2011-12-10 00:03:28 UTC
Created attachment 66573 [details]
top libreoffice, bottom calligrawords
Comment 2 Camilla Boemann 2011-12-10 01:49:55 UTC
Git commit b6bf55ad5f542d4ff9bb735323d1da33c8cca4b5 by C. Boemann.
Committed on 10/12/2011 at 02:48.
Pushed by boemann into branch 'master'.

Preserve a pagebreak before table of contents

BUG:288615

M  +1    -0    libs/textlayout/KoTextLayoutArea.cpp
M  +14   -1    libs/textlayout/ToCGenerator.cpp
M  +1    -0    libs/textlayout/ToCGenerator.h

http://commits.kde.org/calligra/b6bf55ad5f542d4ff9bb735323d1da33c8cca4b5