Preserve a pagebreak before table of contents

BUG:288615